--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,7 @@ pandas>=1.5.0
 numpy>=1.23.0
 plotly>=5.13.0
 scipy>=1.9.0
-python-dateutil>=2.8.2 
+seaborn>=0.12.0
+python-dateutil>=2.8.2
+matplotlib>=3.6.0
+statsmodels>=0.13.0 
